--- a/workflows/run.yml
+++ b/workflows/run.yml
@@ -1,4 +1,4 @@
-name: FastAPI test 
+name: FastAPI test
 
 on:
   push:
@@ -22,13 +22,13 @@ jobs:
       - name: Install Backend Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r ./requirements.txt
+          pip install -r ./TP1/requirements.txt
 
       - name: Start Backend Server
-        run: uvicorn app.main:app --reload & 
+        run: uvicorn TP1.app.main:app --reload &
 
-      #add some test
+      # Add some test
       - name: Test with pytest
         run: |
           pip install pytest pytest-cov
-          pytest
+          pytest TP1
