--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -29,7 +29,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: ./TP1
+          file: ./TP1/Dockerfile
           platforms: linux/arm/v7
           push: true
           tags: bdallard/python-ci:latest
