--- a/MonProjet/projet-devops/package.json
+++ b/MonProjet/projet-devops/package.json
@@ -4,11 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "main": "main.js",
+  "jest": {
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    }
+  },
   "scripts": {
     "dev": "vite",
-    "build": "vite build", 
+    "build": "vite build",
     "serve": "vite preview",
-    "electron": "electron ."
+    "electron": "electron .",
+    "test": "jest"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
@@ -18,16 +24,21 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.15.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "babel-jest": "^29.7.0",
     "electron": "^33.2.1",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
+    "jest": "^29.7.0",
     "vite": "^6.0.0"
   }
 }
