--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,6 +48,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./MonProjet/DEVOPS-API
+          file: ./MonProjet/DEVOPS-API/.dockerfile
           push: true
           tags: hugopere55/backend-microservices:latest
 
