--- a/MonProjet/projet-devops/package.json
+++ b/MonProjet/projet-devops/package.json
@@ -4,6 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "main": "main.js",
+  "jest": {
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
