--- a/MonProjet/projet-devops/package.json
+++ b/MonProjet/projet-devops/package.json
@@ -7,7 +7,13 @@
   "jest": {
     "transform": {
       "^.+\\.(js|jsx)$": "babel-jest"
-    }
+    },
+    "transformIgnorePatterns": [
+      "/node_modules/(?!@testing-library).+\\.js$"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/node_modules/@testing-library/jest-dom/extend-expect"
+    ]
   },
   "scripts": {
     "dev": "vite",
@@ -28,6 +34,7 @@
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.15.0",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/react": "^18.3.12",
