--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,13 +21,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '18'
 
       - name: Install dependencies
         run: npm install
 
-      # - name: Run tests
-      #   run: npm test
+      - name: Run frontend tests
+        run: npm test
 
   build-backend-docker:
     runs-on: ubuntu-latest
@@ -76,21 +76,29 @@ jobs:
           push: true
           tags: hugopere55/frontend-microservices:latest
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [build-backend-docker, build-frontend-docker]
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: [build-backend-docker, build-frontend-docker]
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.3
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+  #     - name: Deploy to Cloudron
+  #       run: |
+  #         # Déployer le backend sur Cloudron
+  #         curl -X POST https://<cloudron_domain>/api/v1/apps/<backend_app_id>/deploy \
+  #         -H "Authorization: Bearer ${{ secrets.CLOUDRON_API_TOKEN }}" \
+  #         -H "Content-Type: application/json" \
+  #         -d '{
+  #           "dockerImage": "hugopere55/backend-microservices:latest",
+  #           "portMapping": [{"containerPort": 5000, "hostPort": 5000}]
+  #         }'
 
-      - name: Deploy to Coolify server
-        run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} << 'EOF'
-          coolify deploy backend-microservices --image hugopere55/backend-microservices:latest --port 5000:5000
-          coolify deploy frontend-microservices --image hugopere55/frontend-microservices:latest --port 3000:3000
-          EOF
+  #         # Déployer le frontend sur Cloudron
+  #         curl -X POST https://<cloudron_domain>/api/v1/apps/<frontend_app_id>/deploy \
+  #         -H "Authorization: Bearer ${{ secrets.CLOUDRON_API_TOKEN }}" \
+  #         -H "Content-Type: application/json" \
+  #         -d '{
+  #           "dockerImage": "hugopere55/frontend-microservices:latest",
+  #           "portMapping": [{"containerPort": 3000, "hostPort": 3000}]
+  #         }'
