--- a/MonProjet/projet-devops/package.json
+++ b/MonProjet/projet-devops/package.json
@@ -4,23 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "main": "main.js",
-  "jest": {
-    "transform": {
-      "^.+\\.(js|jsx)$": "babel-jest"
-    },
-    "transformIgnorePatterns": [
-      "/node_modules/(?!@testing-library).+\\.js$"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/node_modules/@testing-library/jest-dom/extend-expect"
-    ]
-  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
     "electron": "electron .",
-    "test": "node --experimental-vm-modules node_modules/.bin/jest"
+    "test": "react-scripts test --watchAll=false --coverage"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
@@ -31,6 +20,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.15.0",
@@ -48,6 +38,8 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "jest": "^29.7.0",
-    "vite": "^6.0.0"
+    "react-scripts": "^5.0.1",
+    "vite": "^6.0.0",
+    "vite-plugin-test": "^0.0.5"
   }
 }
